--- a/run_once_before_install.sh.tmpl
+++ b/run_once_before_install.sh.tmpl
@@ -10,6 +10,13 @@ fi
 command -v brew >/dev/null 2>&1 || \
   (echo '🍺  Installing Homebrew' && /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)")
 
+# Add Homebrew to path
+if ! grep -q 'eval "$(/opt/homebrew/bin/brew shellenv)"' ~/.zprofile; then
+  echo '🍺  Adding Homebrew to path'
+  echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+  eval "$(/opt/homebrew/bin/brew shellenv)"
+fi
+
 # Cleanup chezmoi
 if [ -f ~/.local/bin/chezmoi ]; then
   echo "🧹  Cleaning up chezmoi..."
@@ -19,6 +26,13 @@ fi
 # Brew bundle
 echo "📦  Installing packages..."
 brew bundle --no-upgrade --no-lock --file=/dev/stdin <<EOF
+
+{{- if eq .chezmoi.hostname "Mac-WP2DG2N2" }}
+  # client_1 brew
+  tap {{ (onepasswordItemFields "jshezjjznm6m676hkesgisns7i").brew_tap.value }}
+  brew {{ (onepasswordItemFields "jshezjjznm6m676hkesgisns7i").brew.value }}
+{{- end }}
+
 ### BREWFILE START
 tap "1password/tap"
 tap "equinix-labs/otel-cli"
@@ -27,21 +41,30 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 brew "act"
 brew "ansible"
+brew "docutils"
+brew "python@3.11"
 brew "awscli"
 brew "bat"
 brew "chezmoi"
+brew "coreutils"
 brew "gh"
 brew "git"
 brew "go"
 brew "goreleaser"
 brew "helm"
 brew "jq"
+brew "k9s"
 brew "kubectx"
+brew "lima"
 brew "mas"
+brew "molecule"
 brew "node"
+brew "virtualenv"
+brew "poetry"
 brew "pre-commit"
 brew "ranger"
 brew "ripgrep"
+brew "telnet"
 brew "tfenv"
 brew "tgenv"
 brew "tree"
@@ -50,9 +73,12 @@ brew "equinix-labs/otel-cli/otel-cli"
 cask "1password"
 cask "1password-cli"
 cask "discord"
+cask "flux"
 cask "google-chrome"
 cask "iterm2"
 cask "microsoft-teams"
+cask "ngrok"
+cask "postman"
 cask "rancher"
 cask "rectangle"
 cask "signal"
@@ -60,7 +86,15 @@ cask "slack"
 cask "spotify"
 cask "visual-studio-code"
 cask "zoom"
+mas "1Password for Safari", id: 1569813296
 mas "Amphetamine", id: 937984704
+mas "Keynote", id: 409183694
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
 ### BREWFILE END
 EOF
+
+# TODO: Setup op gh plugin
+# TODO: tfenv install and tfenv use
+# TODO: install python somehow
 {{ end -}}
