Add gitconfig for client_1

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -21,6 +21,9 @@
 [includeIf "gitdir:~/Projects/client_0/**"]
     path = ~/Projects/client_0/.gitconfig
 
+[includeIf "gitdir:~/Projects/client_1/**"]
+    path = ~/Projects/client_1/.gitconfig
+
 [rebase]
     autosquash = true
 
