--- a/run_once_before_install.sh.tmpl
+++ b/run_once_before_install.sh.tmpl
@@ -37,45 +37,57 @@ brew bundle --no-upgrade --no-lock --file=/dev/stdin <<EOF
 tap "1password/tap"
 tap "equinix-labs/otel-cli"
 tap "goreleaser/tap"
+tap "grafana/grafana"
 tap "homebrew/bundle"
-tap "homebrew/cask"
+tap "norwoodj/tap"
 brew "act"
+brew "python@3.12"
 brew "ansible"
-brew "docutils"
 brew "python@3.11"
 brew "awscli"
 brew "bat"
 brew "chezmoi"
 brew "coreutils"
+brew "docutils"
+brew "fzf"
 brew "gh"
 brew "git"
+brew "glab"
+brew "gnutls"
 brew "go"
+brew "go-task"
+brew "go@1.21"
 brew "goreleaser"
+brew "graphviz"
 brew "helm"
 brew "jq"
 brew "k9s"
+brew "keyring"
 brew "kubectx"
+brew "qemu"
 brew "lima"
 brew "mas"
 brew "molecule"
 brew "node"
-brew "virtualenv"
 brew "poetry"
 brew "pre-commit"
 brew "ranger"
 brew "ripgrep"
 brew "telnet"
+brew "terraform-docs"
 brew "tfenv"
+brew "tflint"
 brew "tgenv"
 brew "tree"
+brew "virtualenv"
+brew "yamlfmt"
 brew "yq"
 brew "equinix-labs/otel-cli/otel-cli"
-cask "1password"
+brew "grafana/grafana/alloy"
+brew "norwoodj/tap/helm-docs"
 cask "1password-cli"
 cask "discord"
 cask "flux"
-cask "google-chrome"
-cask "iterm2"
 cask "microsoft-teams"
 cask "ngrok"
 cask "postman"
