clean up support for non-darwin based systems

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -163,3 +163,11 @@ alias awslogin="op://Private/jshezjjznm6m676hkesgisns7i/awslogin"
 
 # Autocompletion
 source <(kubectl completion zsh)
+
+# Install NVM
+# curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+
+# NVM
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
