--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -136,7 +136,11 @@ syncbrewtochez() {
 source $HOME/.config/op/plugins.sh
 
 # Homebrew
+{{- if eq .chezmoi.os "linux" }}
+eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+{{- else }}
 eval "$(/opt/homebrew/bin/brew shellenv)"
+{{- end }}
 
 # GitHub PAT
 export GH_USER="pmpaulino"
@@ -164,10 +168,8 @@ alias awslogin="op://Private/jshezjjznm6m676hkesgisns7i/awslogin"
 # Autocompletion
 source <(kubectl completion zsh)
 
-# Install NVM
+# nvm
 # curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
-
-# NVM
-export NVM_DIR="$HOME/.nvm"
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
-[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+# export NVM_DIR="$HOME/.nvm"
+# [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+# [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
