--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -1,6 +1,11 @@
 Host *
+  {{ if eq .chezmoi.os "darwin" -}}
   IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
+  {{ else if eq .chezmoi.os "linux" -}}
+	IdentityAgent ~/.1password/agent.sock
+  {{ end -}}
   IdentityFile ~/.ssh/{{ (onepasswordItemFields "2mhp2daf5vcvgmscl5vtbp6l5e").file_name.value }}
+
 
 Host {{ (onepasswordItemFields "i7sdiseuc47purydotahi7ksfm").proxy_website.value }}
   HostName github.com
