--- a/run_once_before_install.sh.tmpl
+++ b/run_once_before_install.sh.tmpl
@@ -13,7 +13,7 @@ if ! dpkg-query -W -f='${Status}' 1password 2>/dev/null | grep -q "ok installed"
   sudo mkdir -p /usr/share/debsig/keyrings/AC2D62742012EA22
   curl -sS https://downloads.1password.com/linux/keys/1password.asc | \
   sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
-  sudo apt update && sudo apt install 1password 1password-cli
+  sudo apt update && sudo apt install -y 1password 1password-cli
 fi
 
 # Check if zsh is installed
@@ -25,12 +25,13 @@ fi
 # Check if default shell is zsh
 if [[ "$(basename "$SHELL")" != "zsh" ]]; then
   echo "Changing default shell to zsh..."
-  chsh -s "$(command -v zsh)"
+  sudo chsh -s "$(command -v zsh)"
 fi
 
 # Install Homebrew
 if ! command -v brew &> /dev/null; then
   sudo apt update && sudo apt install -y build-essential
+  # TODO make this non-interactive
   /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 fi
 
@@ -43,6 +44,8 @@ if ! grep -q 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' ~/.bashrc;
   (echo; echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"') >> ~/.bashrc
   eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
 fi
+
+# TODO eval $SHELL or something similar to make sure the shellenv is sourced
 
 # Check if gcc is installed
 if ! dpkg-query -W -f='${Status}' gcc 2>/dev/null | grep -q "ok installed"; then
@@ -57,9 +60,9 @@ if ! dpkg-query -W -f='${Status}' code 2>/dev/null | grep -q "ok installed"; the
   sudo install -D -o root -g root -m 644 packages.microsoft.gpg /etc/apt/keyrings/packages.microsoft.gpg
   echo "deb [arch=amd64,arm64,armhf signed-by=/etc/apt/keyrings/packages.microsoft.gpg] https://packages.microsoft.com/repos/code stable main" |sudo tee /etc/apt/sources.list.d/vscode.list > /dev/null
   rm -f packages.microsoft.gpg
-  sudo apt install apt-transport-https
+  sudo apt install -y apt-transport-https
   sudo apt update
-  sudo apt install code # or code-insiders
+  sudo apt install -y code # or code-insiders
 fi
 {{- end }}
 
@@ -82,6 +85,7 @@ brew bundle --no-upgrade --no-lock --file=/dev/stdin <<EOF
   brew {{ (onepasswordItemFields "jshezjjznm6m676hkesgisns7i").brew.value }}
 EOF
 {{- end }}
+
 {{- end }}
 
 # Install Oh My Zsh
