--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -196,6 +196,7 @@ export FZF_DEFAULT_OPTS=" \
     --color=marker:#b4befe,fg+:#cdd6f4,prompt:#cba6f7,hl+:#f38ba8 \
     --color=selected-bg:#45475a \
     --multi"
+source <(fzf --zsh)
 
 alias tailscale="/Applications/Tailscale.app/Contents/MacOS/Tailscale"
 
