--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -88,7 +88,7 @@ source $ZSH/oh-my-zsh.sh
 if [[ -n $SSH_CONNECTION ]]; then
     export EDITOR='vim'
 else
-    export EDITOR='code --wait'
+    export EDITOR='cursor --wait'
 fi
 
 # Compilation flags
@@ -116,8 +116,8 @@ eval "$(/opt/homebrew/bin/brew shellenv)"
 {{- end }}
 
 # GitHub PAT
-export GH_USER="pmpaulino"
-export GH_PAT="op://Private/xndcgybadcw6stdi6o6xjexexq/token"
+export GITHUB_USER="pmpaulino"
+export GITHUB_TOKEN="op://Private/xndcgybadcw6stdi6o6xjexexq/token"
 
 # Go
 export GOENV_ROOT="$HOME/.goenv"
@@ -126,20 +126,7 @@ eval "$(goenv init -)"
 export PATH="$GOROOT/bin:$PATH"
 export PATH="$PATH:$GOPATH/bin"
 
-
-# Grafana Cloud
-export GRAF_USER="op://Private/oac7q5xjasskyomrv24ubmo5iq/GRAF_USER"
-export GRAF_PAT="op://Private/oac7q5xjasskyomrv24ubmo5iq/GRAF_PAT"
-
-{{- if eq .chezmoi.hostname "Mac-WP2DG2N2" }}
-# client_1
-export GITLAB_TOKEN_="op://Private/jshezjjznm6m676hkesgisns7i/GITLAB_TOKEN"
-export AWS_DEFAULT_REGION="op://Private/jshezjjznm6m676hkesgisns7i/AWS_DEFAULT_REGION"
-export AWS_DEFAULT_PROFILE="op://Private/jshezjjznm6m676hkesgisns7i/AWS_DEFAULT_PROFILE"
-alias awslogin="op://Private/jshezjjznm6m676hkesgisns7i/awslogin"
-{{- end }}
-
-# Autocompletion
+# kubectl
 source <(kubectl completion zsh)
 
 # NVM
@@ -154,27 +141,10 @@ if [ -f "$HOME/.rye/env" ]; then
     source "$HOME/.rye/env"
 fi
 
-# draw.io
-alias drawio="/Applications/draw.io.app/Contents/MacOS/draw.io"
-
 # autocompletion
 autoload -Uz compinit
 zstyle ':completion:*' menu select
 fpath+=~/.zfunc
-
-# kpv3-cli
-# if [ -f "$HOME/.kpv3-cli/bin/kpv3-cli" ]; then
-#     source <($HOME/.kpv3-cli/bin/kpv3-cli source)
-# fi
-
-# if ! [ -s $HOME/.kpv3-cli/consent.yaml ]; then
-#     kpv3-cli consent
-# fi
-# if ! [ -s $HOME/.kube/k8s-platform-v3 ]; then
-#     kpv3-cli kubeconfig -w
-# fi
-
-export KUBECONFIG=/Users/patrick/Projects/pmpaulino/homelab/clusters/talos/tmp/kubeconfig
 
 # thefuck
 eval $(thefuck --alias)
@@ -198,6 +168,7 @@ export FZF_DEFAULT_OPTS=" \
     --multi"
 source <(fzf --zsh)
 
+# tailscale
 alias tailscale="/Applications/Tailscale.app/Contents/MacOS/Tailscale"
 
 # XDG
@@ -208,23 +179,8 @@ export XDG_STATE_HOME="$HOME/.local/state"
 export XDG_CONFIG_DIRS="/etc/xdg"
 export XDG_CONFIG_DIRS="/etc/xdg"
 
+# k9s
 export K9S_CONFIG="${HOME}/.config/k9s"
-
-export PATH="/opt/homebrew/opt/openjdk@17/bin:$PATH"
-
-# Amazon Q post block. Keep at the bottom of this file.
-[[ -f "${HOME}/Library/Application Support/amazon-q/shell/zshrc.post.zsh" ]] && builtin source "${HOME}/Library/Application Support/amazon-q/shell/zshrc.post.zsh"
-
-# dotnet
-export DOTNET_ROOT="/opt/homebrew/opt/dotnet/libexec"
-export PATH="/opt/homebrew/opt/dotnet@6/bin:$PATH"
-export MONO_GAC_PREFIX="/opt/homebrew"
-
-# java
-# sudo ln -sfn /opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-17.jdk
-export JAVA_HOME="/opt/homebrew/opt/openjdk@17"
-export PATH="/opt/homebrew/opt/openjdk@17/bin:$PATH"
-export CPPFLAGS="-I/opt/homebrew/opt/openjdk@17/include"
 
 # ngrok
 if command -v ngrok &>/dev/null; then
