feat(aerospace): enhance application detection rules for Chrome and Brave
- Added new rules to move Google Chrome and Brave Browser to workspace B upon detection
- Updated existing rules to move Brave Browser instances to workspace C
- Restored layout floating configuration for Finder application

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -19,14 +19,8 @@
 [commit]
     gpgsign = true
 
-[includeIf "gitdir:~/Projects/liatrio/**"]
-    path = ~/Projects/liatrio/.gitconfig
-
-[includeIf "gitdir:~/Projects/client_0/**"]
-    path = ~/Projects/client_0/.gitconfig
-
-[includeIf "gitdir:~/Projects/client_1/**"]
-    path = ~/Projects/client_1/.gitconfig
+[includeIf "gitdir:~/Projects/sardine/**"]
+    path = ~/Projects/sardine/.gitconfig
 
 [rebase]
     autosquash = true
