--- a/Projects/sardine/dot_gitconfig.tmpl
+++ b/Projects/sardine/dot_gitconfig.tmpl
@@ -1,4 +1,4 @@
 [user]
     name = Patrick Paulino
-    email = {{ (onepasswordItemFields "2mhp2daf5vcvgmscl5vtbp6l5e").email.value }}
+    email = {{ (onepasswordItemFields "2mhp2daf5vcvgmscl5vtbp6l5e").work_email.value }}
     signingkey = {{ (onepasswordDetailsFields "2mhp2daf5vcvgmscl5vtbp6l5e").public_key.value }}
