feat(aerospace, dot_zshrc): update workspace shortcuts and environment variables
- Commented out the command to move workspace "F" to "main" in dot_aerospace.toml
- Added new shortcuts for workspaces 1, 2, B, C, E, M, N, S, and T with alt-ctrl-cmd combinations
- Updated the environment variable for 1Password account in dot_zshrc.tmpl

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -107,6 +107,7 @@ fi
 if [ -f "$HOME/.config/op/plugins.sh" ]; then
     source "$HOME/.config/op/plugins.sh"
 fi
+export OP_ACCOUNT="my.1password.com"
 
 # Homebrew
 {{- if eq .chezmoi.os "linux" }}
