chore(dot_zshrc, packages.yaml): replace NVM with FNM and add FNM to package list
- Removed NVM configuration from dot_zshrc.tmpl and added FNM (Fast Node Manager) setup.
- Updated packages.yaml to include FNM in the package list.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -130,11 +130,8 @@ export PATH="$PATH:$GOPATH/bin"
 # kubectl
 source <(kubectl completion zsh)
 
-# NVM
-# TODO: install nvm, curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
-export NVM_DIR="$HOME/.nvm"
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
-[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+# fnm (Fast Node Manager)
+eval "$(fnm env --use-on-cd --shell zsh)"
 
 # rye
 # TODO: move to uv from rye
